--- a/ecommerce/pom.xml
+++ b/ecommerce/pom.xml
@@ -89,6 +89,14 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!--	RAZORPAY	-->
+		<!-- https://mvnrepository.com/artifact/com.razorpay/razorpay-java -->
+		<dependency>
+			<groupId>com.razorpay</groupId>
+			<artifactId>razorpay-java</artifactId>
+			<version>1.4.3</version>
+		</dependency>
+
 
 	</dependencies>
 
