--- a/ecommerce/src/main/resources/application.properties
+++ b/ecommerce/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql: true
 logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.springframework.security=TRACE
-logging.level.com.flipkart.ecommerce=DEBUG
+#logging.level.org.springframework.security=TRACE
+#logging.level.com.flipkart.ecommerce=DEBUG
 
 
 # RAZORPAY
