added test cases

--- a/ecommerce/src/main/resources/application.properties
+++ b/ecommerce/src/main/resources/application.properties
@@ -17,4 +17,9 @@ logging.level.org.hibernate.SQL=DEBUG
 razorpay.api.key = rzp_test_mGtVbUWNSNAY9X
 razorpay.api.secret = 75fioYSUgjvwLED4xevZXD78
 
-
+# Testing Properties
+spring.test.datasource.url=jdbc:h2:mem:testdb
+spring.test.datasource.driver-class-name=org.h2.Driver
+spring.test.datasource.username=sa
+spring.test.datasource.password=password
+spring.test.datasource.platform=h2
