--- a/ecommerce/pom.xml
+++ b/ecommerce/pom.xml
@@ -97,6 +97,15 @@
 			<version>1.4.3</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>2.2.224</version>
+			<scope>test</scope>
+		</dependency>
+
+
 
 	</dependencies>
 
